<resources>
    <string name="app_name">什么值得看</string>

    <!--按钮显示-->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="home">主页</string>
    <string name="news_title">资讯</string>
    <string name="video_title">视频</string>
    <string name="search_title">搜索</string>
    <string name="images_title">图集</string>
    <string name="user_title">个人</string>
    <string name="user_info">我的信息</string>
    <string name="about">关于</string>
    <string name="announce">公告</string>
    <string name="feedback">建议反馈</string>
    <string name="recharge_vip">成为会员</string>

    <string name="search_text">搜 索</string>

    <string name="menu_weixin">微信精选</string>
    <string name="menu_zhihu">知乎精选</string>
    <string name="menu_duzhe">读者精选</string>
    <string name="menu_neihan">内涵娱乐</string>
    <string name="menu_meinv">美女图片</string>
    <string name="menu_gif">有趣动图</string>
    <string name="menu_xiandu">闲读</string>
    <string name="menu_lengzhishi">冷知识</string>

    <string name="menu_neihan_eassay">段子</string>
    <string name="menu_neihan_eassay_image">内涵图</string>
    <string name="menu_ydzx_gif">搞笑</string>
    <string name="menu_ydzx_gif2">搞笑GIF</string>
    <string name="menu_ydzx_gif3">每天GIF</string>
    <string name="details">详情</string>
    <string name="comment">评论</string>

    <string name="boy">男</string>
    <string name="girl">女</string>

    <string name="change_name">修改名称</string>


    <!--提示性信息-->
    <string name="exit_app">再次点击退出</string>
    <string name="data_error">数据异常，请稍后再试</string>
    <string name="not_more">没有更多了</string>
    <string name="show_long_image">点击显示长图</string>
    <string name="show_gif_image">点击显示 GIF 图</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败，请重试</string>
    <string name="download_error">下载失败</string>
    <string name="download_running">正在下载...</string>
    <string name="parameter_error">参数错误，请尝试重新打开</string>
    <string name="net_error">网络异常，请稍后再试</string>
    <string name="search_fail">您要的资源躲起来了，没有找到它呢~~~\n去看看其它引擎有没有找到 (*^▽^*)</string>
    <string name="no_wifi_status">已为您调整为流量模式</string>
    <string name="share_app_fail">抱歉，分享出现异常。要分享的文字已复制到您的粘贴板中，你可以直接去想要分享的平台 粘贴 即可。</string>

    <string name="join_qq">mqqopensdkapi://bizAgent/qm/qr?url=http%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3Ffrom%3Dapp%26p%3Dandroid%26k%3DNBg_ouAY8Clp07tHP0A3gtNUigmeDDFK</string>
    <string name="join_qq_fail">未安装手Q或安装的版本不支持</string>

    <string name="shop_sale_price_txt">%1$s元卷</string>
    <string name="shop_salesvolume">已抢%1$s件</string>
    <string name="text_show_num_comment">查看%1$d条回复</string>
    <string name="share_text">给你推荐个APP(什么值得看)。 这里有热点新闻，好玩的知识，有趣的视频，搞笑的段子，逗逼的图片等等各种内容，以及强大的磁力搜索。 快来下载，一览究竟吧：%1$s</string>
    <string name="recharge_vip_msg">
        使用说明：\n\n
        1. 点击“保存二维码”按钮后，程序会自动做一些操作；\n
        &#160;&#160;&#160;&#160;1.1 支付的二维码会保存到手机上；\n
        &#160;&#160;&#160;&#160;1.2 程序会自动复制当前登录账户的用户名，您需粘贴到转账备注；\n
        &#160;&#160;&#160;&#160;1.3 程序会自动跳转到微信或支付宝扫描页面，点击选择图片选择二维码。\n\n
        2. 将 用户名 复制到转账的备注中；\n\n
        3. 支付完成，等待管理员开通。
    </string>
    <string name="recharge_vip_msg_zhuyi">注意：完成支付后并不会立即生效，管理员将在收到您的付款后尽快为您开通（管理员反映很快的哦(*^▽^*)）</string>
    <string name="recharge_vip_money_way">
        充值类型：\n\n
        0.9&#160;&#160;&#160;&#160;元 ： 一天\n
        7.9&#160;&#160;&#160;&#160;元 ： 一个月\n
        13.9 元 ： 三个月\n
        25&#160;&#160;&#160;&#160;&#160;元 ： 永久
    </string>

    <!--对话框-->
    <string name="dialog_title_hint">提示</string>
    <string name="dialog_error">错误</string>
    <string name="dialog_content_put_ask">确认提交？</string>
    <string name="dialog_input_empty">请检查您是否输入内容了！</string>
    <string name="dialog_exit_title">退出用户</string>
    <string name="dialog_exit_msg">您确定要退出当前用户吗？</string>
    <string name="dialog_permission_file">该操作需要获取访问您的文件，请给于相应的权限。</string>

    <!--吐司提示-->
    <string name="toast_username_length">用户名必须在2到32位字符之间</string>
    <string name="toast_password_length">密码必须在8到32位字符之间</string>
    <string name="toast_password_notdif">两次输入的密码不一致</string>
    <string name="toast_nickname_length">昵称不能超过16个字符</string>
    <string name="toast_number_pwd_not_empty">用户名密码不能为空</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_login_success">，欢迎您回来</string>
    <string name="toast_feedback_success">感谢您的反馈，我们一定认真考虑</string>
    <string name="dialog_recharge_vip">成为会员可以获得更多的权益(*^▽^*)</string>
    <string name="dialog_register_user">注册之后可以获得更多的权益哦(*^▽^*)</string>


    <string-array name="sex_array">
        <item>女</item>
        <item>男</item>
    </string-array>
</resources>
